Fix warehouse inventory grid spacing

--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -31,7 +31,7 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
       }
       @include desktop {
-        grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr;
+        grid-template-columns: 1.2fr 0.9fr 1.2fr 0.5fr 1fr;
       }
     }
   }
@@ -67,7 +67,7 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 0.5fr;
       }
       @include desktop {
-        grid-template-columns: 1fr 1.5fr 1fr 1fr 0.5fr;
+        grid-template-columns: 1.2fr 0.9fr 1.2fr 0.5fr 1fr;
       }
     }
   }
