--- a/src/components/WarehouseDetails/WarehouseDetails.scss
+++ b/src/components/WarehouseDetails/WarehouseDetails.scss
@@ -45,7 +45,7 @@
       }
 
       @include desktop {
-        width: 68%;
+        width: 59%;
         padding-bottom: 0;
       }
     }
